--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="player">
 			<div class="timeline">
-				<div class="timeline-chunk timeline-chunk-active">
+				<div class="timeline-chunk active">
 					<div class="timeline-chunk-inner"></div>
 				</div>
 				<div class="timeline-chunk">
@@ -30,7 +30,7 @@
 			<div class="player-content">
 				<div class="player-chunk-switcher player-chunk-prev"></div>
 				<div class="player-chunk-switcher player-chunk-next"></div>
-				<div class="player-chunk player-chunk-active">
+				<div class="player-chunk active">
 					<img src="img/chunk1.jpg" alt="image1">
 				</div>
 				<div class="player-chunk">
