Add slide toggle

--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset=UTF-8">
-		<link rel="stylesheet" href="styles.css">
-		<title>Stories</title>
-	</head>
-	<body>
-		<div class="player">
-			<div class="timeline">
-				<div class="timeline-chunk timeline-chunk-active">
-					<div class="timeline-chunk-inner"></div>
-				</div>
-				<div class="timeline-chunk">
-					<div class="timeline-chunk-inner"></div>
-				</div>
-				<div class="timeline-chunk">
-					<div class="timeline-chunk-inner"></div>
-				</div>
-				<div class="timeline-chunk">
-					<div class="timeline-chunk-inner"></div>
-				</div>
-				<div class="timeline-chunk">
-					<div class="timeline-chunk-inner"></div>
-				</div>
-				<div class="timeline-chunk">
-					<div class="timeline-chunk-inner"></div>
-				</div>
+<head>
+	<meta charset=UTF-8">
+	<link href="styles.css" rel="stylesheet">
+	<title>Stories</title>
+</head>
+<body>
+<div class="player">
+	<div class="timeline">
+		<div class="timeline-chunk timeline-chunk-active">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+		<div class="timeline-chunk">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+		<div class="timeline-chunk">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+		<div class="timeline-chunk">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+		<div class="timeline-chunk">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+		<div class="timeline-chunk">
+			<div class="timeline-chunk-inner"></div>
+		</div>
+	</div>
+	<div class="player-content-wrapper">
+		<div class="player-chunk-switcher player-chunk-prev"></div>
+		<div class="player-chunk-switcher player-chunk-next"></div>
+		<div class="player-content">
+			<div class="player-chunk player-chunk-active">
+				<img alt="image1" src="img/chunk1.jpg">
 			</div>
-			<div class="player-content">
-				<div class="player-chunk-switcher player-chunk-prev"></div>
-				<div class="player-chunk-switcher player-chunk-next"></div>
-				<div class="player-chunk player-chunk-active">
-					<img src="img/chunk1.jpg" alt="image1">
-				</div>
-				<div class="player-chunk">
-					<img src="img/chunk2.jpg" alt="image2">
-				</div>
-				<div class="player-chunk">
-					<img src="img/chunk3.jpg" alt="image3">
-				</div>
-				<div class="player-chunk">
-					<img src="img/chunk4.jpg" alt="image4">
-				</div>
-				<div class="player-chunk">
-					<img src="img/chunk5.jpg" alt="image5">
-				</div>
-				<div class="player-chunk">
-					<img src="img/chunk6.jpg" alt="image6">
-				</div>
+			<div class="player-chunk">
+				<img alt="image2" src="img/chunk2.jpg">
+			</div>
+			<div class="player-chunk">
+				<img alt="image3" src="img/chunk3.jpg">
+			</div>
+			<div class="player-chunk">
+				<img alt="image4" src="img/chunk4.jpg">
+			</div>
+			<div class="player-chunk">
+				<img alt="image5" src="img/chunk5.jpg">
+			</div>
+			<div class="player-chunk">
+				<img alt="image6" src="img/chunk6.jpg">
 			</div>
 		</div>
-		<script src="script.js"></script>
-	</body>
+	</div>
+</div>
+<script src="script.js"></script>
+</body>
 </html>
