--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title>Stories</title>
 	<link href="styles.css" rel="stylesheet">
 	<link href="player/lib.css" rel="stylesheet">
-	<script defer src="player/lib.js"></script>
-	<script defer src="index.js"></script>
+	<script defer src="player/player.js" type="module"></script>
+	<script defer src="index.js" type="module"></script>
 </head>
 <body>
-<div class="my my-player"></div>
+<div class="player"></div>
 </body>
 </html>
