--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Stories</title>
 	<link href="styles.css" rel="stylesheet">
 	<link href="player/lib.css" rel="stylesheet">
-	<script defer src="player/player.js" type="module"></script>
+	<script defer src="player/lib.js" type="module"></script>
 	<script defer src="index.js" type="module"></script>
 </head>
 <body>
